--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <!-- Navigation Menu -->
   <nav class="navbar">
     <div class="logo">
-      <img src="images/logo.jpg" alt="Kindness Task Force Logo">
+      <img src="images/logo.png" alt="Kindness Task Force Logo">
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
