--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <nav class="navbar">
     <div class="logo">
-      <img src="images/logo.jpg" alt="Kindness Task Force Logo">
+      <img src="images/logo.png" alt="Kindness Task Force Logo">
       <h1>Kindness Task Force</h1> <!-- Organization name added -->
     </div>
     <ul class="nav-links">
