about para changed & map removed

--- a/about.html
+++ b/about.html
@@ -34,9 +34,9 @@
     <div class="about-overlay"></div>
     <div class="about-content">
       <h1>About Kindness Task Force</h1>
-      <p>At <strong>Kindness Task Force</strong>, we believe in the power of kindness to transform lives. Our mission is to promote mental health, empower young minds, and inspire a generation of <strong>Empowered, Responsible, and Kind</strong> future adults. We are a group of passionate individuals dedicated to making the world a better place, one act of kindness at a time.</p>
-      <p>Since our inception, we have successfully executed <strong>15 impactful plans</strong>, ranging from community support initiatives to psychological services. Our work is driven by the belief that everyone deserves to live a life of dignity, happiness, and purpose.</p>
-      <p>Join us in our journey to spread kindness and create a ripple effect of positivity across communities.</p>
+      <p>Kindness Outreach Campaign is an initiative of promoting Kindness in daily life. 
+        It consists of a group of Future Aspiring Psychologists and professional Psychologists known 
+        as <strong>Kindness Taskforce </strong> who are the spark that ignites kindness in society!</p>
     </div>
 
     <!-- Statistics Section -->
