--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <!-- Contact Form -->
     <div class="contact-form">
-      <form action="https://formspree.io/f/meoeynpk" method="POST">
+      <form action="https://formspree.io/f/mqapljgy" method="POST">
         <div class="form-group">
           <input type="text" name="name" placeholder="Your Name" required>
         </div>
