--- a/contact.html
+++ b/contact.html
@@ -104,6 +104,20 @@
       font-size: 24px;
       margin-bottom: 10px;
     }
+    .info-card {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+      max-width: 300px; /* Adjust width as needed */
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      transition: 0.3s;
+      box-sizing: border-box;
+    }
+
   </style>
 
 </body>
